# chat-langchain

./: pyproject.toml
backend/: chain.py  ingest.py
frontend/: package.json
frontend/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  SourceBubble.tsx
